# github-issue-collab

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/cli/: package.json
apps/cli/src/: index.ts
apps/server/: .env.example  package.json  pnpm-lock.yaml  vercel.json
apps/server/public/: index.html
apps/server/src/: candidates.ts  connect.ts  create-test-invite.ts  db.ts  designer.ts  email.ts  github.ts  index.ts  mcp.ts  quality.ts  ui.ts  validateEnv.ts  webhook.ts
apps/server/src/__tests__/: invite-flow.test.ts
public/: index.html
scripts/: builder-loop.sh  builder-tui.py
tools/builder-tui/: Cargo.toml  Makefile
tools/builder-tui/src/: app.rs  builder.rs  config.rs  github.rs  main.rs  monitor.rs  poller.rs  prompt.rs  ui.rs
tools/discussion-tui/: Cargo.toml  Makefile
tools/discussion-tui/src/: app.rs  config.rs  github.rs  main.rs  poller.rs  runner.rs  ui.rs
