[package]
name = "discussion-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "discussion-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
